--- a/ts-website/index.html
+++ b/ts-website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaznSZP2EULMsupvv06YJHKu5Kq7QOUXQ&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaznSZP2EULMsupvv06YJHKu5Kq7QOUXQ">
 </script>
     <script src="dist/bundle.js" defer></script>
     <link rel="stylesheet" href="app.css" />
