--- a/TypeScript/ts-website/index.html
+++ b/TypeScript/ts-website/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Google Maps API Example</title>
     <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaznSZP2EULMsupvv06YJHKu5Kq7QOUXQ">
 </script>
